--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "start": "yarn workspace @solidjsrepro/playground run start",
+    "start": "pnpm --filter @solidjsrepro/playground run start",
     "playground": "yarn start",
-    "test": "yarn workspace @solidjsrepro/playground test"
+    "test": "pnpm --filter @solidjsrepro/playground test"
   },
   "workspaces": [
     "packages/*",
@@ -12,6 +12,5 @@
   "devDependencies": {
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
-  },
-  "packageManager": "yarn@3.3.0"
+  }
 }
